--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
 /* Master Styles */
+body {
+  /*text-align: center;*/
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  background: darkblue; 
+  max-width: 100vw;
+  /*overflow: hidden;*/
+}
 h1 {
   color: #369; 
   font-family: Arial, Helvetica, sans-serif;   
-  font-size: 250%;
+  /*font-size: 250%;*/
 }
 h2, h3 { 
   color: #444;
@@ -134,6 +142,9 @@ nav a.router-link-active {
   height: 1.8em;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
+}
+.overDue {
+  color: red;
 }
 
 /* everywhere else */
